<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_primary">

    <include
        android:id="@+id/cardGreeting"
        layout="@layout/include_header_greeting" />

    <LinearLayout
        android:id="@+id/layoutButtons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/cardGreeting"
        app:layout_constraintStart_toStartOf="@+id/cardGreeting"
        app:layout_constraintTop_toBottomOf="@+id/cardGreeting">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDownload"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginVertical="2dp"
            android:layout_weight="1"
            android:minWidth="0dp"
            android:padding="4dp"
            android:text="@string/download"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:background="@drawable/button_tab_selector"
            android:textColor="@color/button_tab_text_selector" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnHistory"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginVertical="2dp"
            android:layout_weight="1"
            android:minWidth="0dp"
            android:padding="4dp"
            android:text="@string/history"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:background="@drawable/button_tab_selector"
            android:textColor="@color/button_tab_text_selector" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnFavorite"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginVertical="2dp"
            android:layout_weight="1"
            android:minWidth="0dp"
            android:textStyle="bold"
            android:padding="4dp"
            android:text="@string/favorite"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:background="@drawable/button_tab_selector"
            android:textColor="@color/button_tab_text_selector" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAnalytics"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginVertical="2dp"
            android:layout_weight="1"
            android:minWidth="0dp"
            android:textStyle="bold"
            android:padding="4dp"
            android:text="@string/analytics"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:background="@drawable/button_tab_selector"
            android:textColor="@color/button_tab_text_selector" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/containerContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutButtons" />

</androidx.constraintlayout.widget.ConstraintLayout>